--- a/src/components/SlideShow/slideShow.css
+++ b/src/components/SlideShow/slideShow.css
@@ -59,7 +59,7 @@
       width: 100%;
       color: white;
       text-align: center;
-      bottom: 1rem;
+      bottom: 2rem;
 }
 
 /* Mobile */
